deploy/environments/dev/coordinator-e2e-infra/services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: envoy
  name: envoy
spec:
  ports:
    - name: http-8081
      port: 8081
      protocol: TCP
      targetPort: 8081
      nodePort: 30080
  selector:
    app: envoy
  type: NodePort
